# ephemeral-os

./: .gitignore  .omc-config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  check_sync  debug_flow.py  e2e_test_run_06_12_report  ephemeralos.yaml  how-to-connect.md  message.jsonl  planner.md  progress.txt  pyproject.toml  row2_content.html  rust.md  sandbox-e2e-jun13.md  skills-lock.json  team-system-prompts-sweevo_benchmark-2a1c5801.md  team-system-prompts-sweevo_benchmark-3e5ec9df.md  test_debug.db
agent-core/crates/eos-agent-core-server/: Cargo.toml
agent-core/crates/eos-agent-def/: Cargo.toml
agent-core/crates/eos-agent-message-records/: Cargo.toml
agent-core/crates/eos-agent-ports/: Cargo.toml
agent-core/crates/eos-agent-run/: Cargo.toml
agent-core/parity/: Cargo.toml
agent-core/parity/_capture/: capture.py
agent-core/parity/prompt_report/: initial_messages_anomaly.json  session_golden.jsonl
agent-core/parity/schemas/: agent_definition.schema.json  message.schema.json  system_notification_block.schema.json  text_block.schema.json  text_tool_output.schema.json  thinking_block.schema.json  tool_result_block.schema.json  tool_use_block.schema.json
agent-core/parity/sqlite/: schema.sql
agent-core/parity/src/: lib.rs
agent-core/parity/tests/: dependency_dag.rs
backend-server/: .gitignore  CODE-REVIEW.md  Cargo.toml  SPEC-REVIEW.md  SPEC.md  implementation_plan.md
backend-server/config/: backend.yml
backend-server/crates/eos-backend-api/: Cargo.toml
backend-server/crates/eos-backend-audit/: Cargo.toml
backend-server/crates/eos-backend-config/: Cargo.toml
backend-server/crates/eos-backend-main/: Cargo.toml
backend-server/crates/eos-backend-obs/: Cargo.toml
backend-server/crates/eos-backend-runtime/: Cargo.toml
backend-server/crates/eos-backend-store/: Cargo.toml
backend-server/crates/eos-backend-types/: Cargo.toml
backend-server/crates/eos-obs-collector/: Cargo.toml
backend-server/crates/eos-sandbox-host/: Cargo.toml
backend-server/scripts/class-inventory/: Cargo.toml  serve.py  serve_all.py  serve_all.sh
base/: Cargo.toml  README.md
base/crates/eos-obs-contract/: Cargo.toml
crates/command/: Cargo.toml
crates/command/src/: lib.rs  process.rs  pty.rs  transcript.rs
crates/config/: Cargo.toml
crates/config/src/: document.rs  merge.rs  paths.rs
crates/e2e-test/: Cargo.toml
crates/e2e-test/src/: container.rs  lib.rs  pool.rs  run.rs
crates/e2e-test/tests/: index.html  readme-manifest.json
crates/e2e-test/tools/: generate-readme-pages.mjs
crates/eosd/: Cargo.toml
crates/eosd/src/: main.rs  runner.rs
crates/host/: Cargo.toml
crates/host/src/: container.rs  daemon_wire.rs  lib.rs  runtime.rs
crates/host/tests/: contract.rs  unit.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: error.rs  lib.rs  manifest.rs  service.rs  service_registry.rs
crates/protocol/: Cargo.toml  PROTOCOL.md
crates/protocol/src/: catalog.rs  envelope.rs  error.rs  fault.rs  lib.rs
crates/sandbox-cli/: Cargo.toml
crates/sandbox-cli-core/: Cargo.toml
crates/sandbox-cli-core/src/: client.rs  output.rs  request_builder.rs
crates/sandbox-cli/src/: help.rs  input.rs  lib.rs  manager.rs  observability.rs  output.rs  runtime.rs
crates/sandbox-cli/tests/: compatibility.rs  help.rs  manager.rs  observability.rs  projection_integrity.rs  request_builder.rs  runtime.rs
crates/sandbox-daemon/: Cargo.toml
crates/sandbox-daemon/src/: cgroup_setup.rs  gate_probe.rs  holder.rs  lib.rs  main.rs  runner.rs  serve.rs  telemetry.rs  thp.rs
crates/sandbox-daemon/tests/: unit.rs
crates/sandbox-gateway/: Cargo.toml
crates/sandbox-gateway-cli/: Cargo.toml
crates/sandbox-gateway-cli/src/: client.rs  config.rs  lib.rs  main.rs  manual.rs  output.rs  request_builder.rs
crates/sandbox-gateway-cli/tests/: unit.rs
crates/sandbox-gateway/src/: config.rs  connection.rs  daemon_client.rs  error.rs  lib.rs  lifecycle.rs  local_daemon_installer.rs  server.rs
crates/sandbox-gateway/tests/: config.rs  daemon_client.rs  gateway_cli.rs  gateway_server.rs  local_daemon_installer.rs
crates/sandbox-manager/: Cargo.toml
crates/sandbox-manager-cli/: Cargo.toml
crates/sandbox-manager-cli/src/: lib.rs  main.rs
crates/sandbox-manager-cli/tests/: smoke.rs
crates/sandbox-manager/src/: daemon_client.rs  daemon_install.rs  error.rs  export_apply.rs  lib.rs  model.rs  progress.rs  resource_ring.rs  runtime.rs  store.rs  workspace_roots.rs
crates/sandbox-manager/tests/: daemon_install.rs  manager_core.rs  manager_export.rs  manager_router.rs  manager_server.rs  resource_ring.rs  store_registry.rs
crates/sandbox-mcp/: Cargo.toml
crates/sandbox-mcp/src/: catalog.rs  config.rs  lib.rs  main.rs  schema.rs  server.rs  tools.rs
crates/sandbox-mcp/tests/: server.rs
crates/sandbox-observability-operations/: Cargo.toml
crates/sandbox-observability-operations/src/: lib.rs
crates/sandbox-provider-docker/: Cargo.toml
crates/sandbox-provider-docker/examples/: start_probe.rs
crates/sandbox-provider-docker/src/: archive.rs  engine.rs  installer.rs  labels.rs  launch.rs  lib.rs  readiness.rs  runtime.rs
crates/sandbox-provider-docker/tests/: launch.rs  readiness.rs  runtime.rs
crates/sandbox-runtime-cli/: Cargo.toml
crates/sandbox-runtime-cli/src/: lib.rs  main.rs
sandbox/: CONTRACT.md  Cargo.toml  README.md
sandbox/config/: README.md  prd.yml
sandbox/contract/: PROTOCOL.md  ops.json
sandbox/docs/: API.md  README.md  RUST-GUIDANCE.md  SPEC-eos-operation-core.md  SPEC-eos-operation-unified-op-io.md  SPEC-eos-operation-v3-unified-contract.md  SPEC.md  command-git-occ-policy_SPEC.md  command-naming-update-note.md  refactor-eos-daemon-bloat.md  sandbox-event-tracing-response-plan.md
sandbox/xtask/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: console_api.rs  lib.rs  main.rs  operation_architecture.rs
xtask/tests/: cfg_policy.rs  console_api.rs  crate_source_size_policy.rs  inline_test_policy.rs  mod_lib_size_policy.rs  operation_architecture.rs
(+16909 files in other folders)
