[workspace]
resolver = "2"
members = [
    "crates/trace",
    "crates/protocol",
    "crates/operation",
    "crates/command",
    "crates/config",
    "crates/eosd",
    "crates/daemon",
    "crates/workspace",
    "crates/namespace",
    "crates/layerstack",
    "crates/overlay",
    "crates/plugin",
    "crates/host",
    "crates/gateway",
    "crates/e2e-test",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# External crates — declared ONCE, consumed via `dep.workspace = true`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
# YAML parser boundary. Only `crates/config/src/yaml.rs` may use this dependency
# directly; callers stay behind `ConfigDocument` and typed section schemas.
serde_yaml_ng = "0.10"
sha2 = "0.10"
prost = "0.13"
prost-build = "0.13"
protoc-bin-vendored = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
thiserror = "2"
time = "0.3"
uuid = { version = "1", default-features = false, features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
rustix = { version = "0.38", features = ["fs", "mount", "process", "thread"] }
nix = "0.29"
libc = "0.2"
anyhow = "1"
proptest = "1"
base64 = "0.22"
futures-util = "0.3"
rtnetlink = "0.21"
netlink-sys = "0.8"

# Internal crates — path deps (the edges below ARE the architecture).
command = { path = "crates/command" }
config = { path = "crates/config" }
layerstack = { path = "crates/layerstack" }
operation = { path = "crates/operation" }
overlay = { path = "crates/overlay" }
plugin = { path = "crates/plugin" }
namespace = { path = "crates/namespace" }
trace = { path = "crates/trace" }
protocol = { path = "crates/protocol" }
daemon = { path = "crates/daemon" }
eosd = { path = "crates/eosd" }
gateway = { path = "crates/gateway" }
host = { path = "crates/host" }
e2e-test = { path = "crates/e2e-test" }
workspace = { path = "crates/workspace" }
xtask = { path = "xtask" }

[workspace.lints.clippy]
# Lint groups need a lower priority than individual lints so the per-lint
# levels below win (clippy lint_groups_priority gate).
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
unwrap_used = "warn"
dbg_macro = "warn"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unused_must_use = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false
