[workspace]
resolver = "2"
members = ["crates/eos-obs-contract"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
unwrap_used = "warn"
dbg_macro = "warn"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"
missing_debug_implementations = "warn"
