[workspace]
resolver = "2"
members = [
    "crates/eos-protocol",
    "crates/eos-config",
    "crates/eosd",
    "crates/eos-daemon",
    "crates/eos-checkpoint-host",
    "crates/eos-occ-layerstack",
    "crates/eos-workspace-run-host",
    "crates/eos-runner",
    "crates/eos-command-session",
    "crates/eos-ns-holder",
    "crates/eos-layerstack",
    "crates/eos-overlay",
    "crates/eos-occ",
    "crates/eos-workspace-api",
    "crates/eos-isolated-workspace",
    "crates/eos-ephemeral-workspace",
    "crates/eos-plugin",
    "crates/eos-e2e-test",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# External crates — declared ONCE, consumed via `dep.workspace = true`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_yaml = "0.9"
sha2 = "0.10"
regex = "1"
ignore = "0.4"
thiserror = "2"
time = "0.3"
uuid = { version = "1", default-features = false, features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
rustix = { version = "0.38", features = ["fs", "mount", "process", "thread"] }
nix = "0.29"
libc = "0.2"
anyhow = "1"
proptest = "1"
base64 = "0.22"
futures-util = "0.3"
rtnetlink = "0.21"
netlink-sys = "0.8"
# Test-support only (eos-e2e-test): parse the committed e2e.toml topology config.
toml = "0.8"

# Internal crates — path deps (the edges below ARE the architecture).
eos-protocol = { path = "crates/eos-protocol" }
eos-config = { path = "crates/eos-config" }
eos-layerstack = { path = "crates/eos-layerstack" }
eos-overlay = { path = "crates/eos-overlay" }
eos-occ = { path = "crates/eos-occ" }
eos-workspace-api = { path = "crates/eos-workspace-api" }
eos-isolated-workspace = { path = "crates/eos-isolated-workspace" }
eos-ephemeral-workspace = { path = "crates/eos-ephemeral-workspace" }
eos-plugin = { path = "crates/eos-plugin" }
eos-runner = { path = "crates/eos-runner" }
eos-command-session = { path = "crates/eos-command-session" }
eos-ns-holder = { path = "crates/eos-ns-holder" }
eos-daemon = { path = "crates/eos-daemon" }
eos-checkpoint-host = { path = "crates/eos-checkpoint-host" }
eos-occ-layerstack = { path = "crates/eos-occ-layerstack" }
eos-workspace-run-host = { path = "crates/eos-workspace-run-host" }
eosd = { path = "crates/eosd" }
eos-e2e-test = { path = "crates/eos-e2e-test" }
xtask = { path = "xtask" }

[workspace.lints.clippy]
# Lint groups need a lower priority than individual lints so the per-lint
# levels below win (clippy lint_groups_priority gate).
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
unwrap_used = "warn"
dbg_macro = "warn"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unused_must_use = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false
