[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ignore.workspace = true
sandbox-operation-catalog = { workspace = true, features = ["manager", "observability", "runtime"] }
sandbox-operation-contract.workspace = true
sha2.workspace = true

[lints]
workspace = true
