[package]
name = "eos-parity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# Test-only crate: pins frozen Python behavior as committed fixtures and guards
# them. No public API and no runtime dependencies; everything lives in `tests/`.

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
