[package]
name = "command"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
config.workspace = true
nix = { workspace = true, features = ["process", "signal"] }
rustix = { workspace = true, features = ["pty", "event"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

[lints]
workspace = true
