[package]
name = "config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_path_to_error.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true

[lints]
workspace = true
