[package]
name = "e2e-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Protocol-only sandbox correctness/pressure suite: drives a live eosd over the wire."

[dependencies]
# The ONLY operation interface: the host wire client against a
# live eosd; protocol supplies the op-name catalog and config the
# shared file-limit constants for tests.
config = { workspace = true }
host = { workspace = true, features = ["e2e-support"] }
protocol = { workspace = true }
trace = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
# Test-edge orchestration error type (binary/test boundary, per Rust guidance).
anyhow = { workspace = true }

[features]
# When enabled, a missing docker/eosd environment is a HARD failure instead of a
# graceful skip. CI runs `--features e2e` on Linux to enforce real execution;
# dev hosts run plain `cargo test` and skip the docker tiers cleanly.
e2e = []

[[bin]]
name = "e2e-reap"
path = "src/bin/e2e-reap.rs"
test = false

[[bin]]
name = "e2e-runner"
path = "src/bin/e2e-runner.rs"
test = false

[[test]]
name = "core"
path = "tests/core/mod.rs"

[[test]]
name = "daemon"
path = "tests/daemon/mod.rs"

[[test]]
name = "daemon-config"
path = "tests/daemon-config/mod.rs"

[[test]]
name = "host_workspace"
path = "tests/host_workspace/mod.rs"

[[test]]
name = "workspace-runtime-isolated"
path = "tests/workspace-runtime-isolated/mod.rs"

[[test]]
name = "workspace-publish-gate"
path = "tests/workspace-publish-gate/mod.rs"

[[test]]
name = "workspace-runtime-command"
path = "tests/workspace-runtime-command/mod.rs"

[[test]]
name = "pressure"
path = "tests/pressure/mod.rs"

[[test]]
name = "plugin"
path = "tests/plugin/mod.rs"

[[test]]
name = "plugin-disabled"
path = "tests/plugin-disabled/mod.rs"

[lints]
workspace = true
