[package]
name = "host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
e2e-support = []

[dependencies]
anyhow.workspace = true
# preserve_order keeps host-encoded request args in caller order.
serde_json = { workspace = true, features = ["preserve_order"] }
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
