[package]
name = "plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Errors + small JSON arg objects only. NOT layerstack — the no-publish/no-second-writer
# guard (06-crate-map §A) keeps that internal edge absent; PPC payload bodies stay
# opaque `String`, reusing compact JSON wire-message encode/decode.
serde.workspace = true
thiserror.workspace = true
# preserve_order keeps PPC message args in insertion order on the wire.
serde_json = { workspace = true, features = ["preserve_order"] }

[lints]
workspace = true
