[package]
name = "protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
trace.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
uuid.workspace = true

[lints]
workspace = true
