[package]
name = "sandbox-cli-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sandbox-config.workspace = true
sandbox-protocol.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
