[package]
name = "sandbox-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
manager = ["dep:clap", "dep:sandbox-manager-operations"]
runtime = ["dep:clap", "dep:sandbox-runtime-operations"]
observability = ["dep:clap", "dep:sandbox-observability-operations"]

[[bin]]
name = "sandbox-manager-cli"
path = "src/bin/sandbox-manager-cli.rs"
required-features = ["manager"]

[[bin]]
name = "sandbox-runtime-cli"
path = "src/bin/sandbox-runtime-cli.rs"
required-features = ["runtime"]

[[bin]]
name = "sandbox-observability-cli"
path = "src/bin/sandbox-observability-cli.rs"
required-features = ["observability"]

[dependencies]
clap = { workspace = true, optional = true }
sandbox-config.workspace = true
sandbox-manager-operations = { workspace = true, optional = true }
sandbox-observability-operations = { workspace = true, optional = true }
sandbox-protocol.workspace = true
sandbox-runtime-operations = { workspace = true, optional = true }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
