[package]
name = "sandbox-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
manager = ["dep:clap", "sandbox-operation-catalog/manager"]
runtime = ["dep:clap", "sandbox-operation-catalog/runtime"]
observability = ["dep:clap", "sandbox-operation-catalog/observability"]

[[bin]]
name = "sandbox-manager-cli"
path = "src/bin/sandbox-manager-cli.rs"
required-features = ["manager"]

[[bin]]
name = "sandbox-runtime-cli"
path = "src/bin/sandbox-runtime-cli.rs"
required-features = ["runtime"]

[[bin]]
name = "sandbox-observability-cli"
path = "src/bin/sandbox-observability-cli.rs"
required-features = ["observability"]

[dependencies]
clap = { workspace = true, optional = true }
sandbox-operation-catalog.workspace = true
sandbox-operation-client.workspace = true
sandbox-operation-contract.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
