[package]
name = "sandbox-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sandbox-daemon"
path = "src/main.rs"

[[bin]]
name = "eosd"
path = "src/main.rs"

[dependencies]
command.workspace = true
config.workspace = true
namespace-process.workspace = true
sandbox-protocol.workspace = true
sandbox-runtime.workspace = true
workspace.workspace = true
anyhow.workspace = true
# preserve_order keeps incoming operation arguments in caller order while this
# crate still accepts raw JSON requests.
serde_json = { workspace = true, features = ["preserve_order"] }
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true

[lints]
workspace = true
