[package]
name = "sandbox-gateway-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
sandbox-protocol.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
