[package]
name = "sandbox-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sandbox-manager.workspace = true
sandbox-protocol.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
