[package]
name = "sandbox-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "sandbox-gateway"

[[bin]]
name = "sandbox-gateway"
path = "src/gateway/main.rs"

[dependencies]
nix = { workspace = true, features = ["process", "signal"] }
sandbox-config.workspace = true
sandbox-operation-contract.workspace = true
sandbox-manager.workspace = true
sandbox-protocol.workspace = true
sandbox-provider-docker.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[lints]
workspace = true
