[package]
name = "sandbox-manager-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "sandbox-manager-cli"

[[bin]]
name = "sandbox-manager-cli"
path = "src/main.rs"

[dependencies]
sandbox-cli-core.workspace = true
sandbox-manager-operations.workspace = true
sandbox-observability-operations.workspace = true
sandbox-protocol.workspace = true
clap.workspace = true
tokio.workspace = true

[lints]
workspace = true
