[package]
name = "sandbox-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
sandbox-operation-contract.workspace = true
sandbox-operation-catalog = { workspace = true, features = ["manager", "observability", "runtime"] }
sandbox-runtime-layerstack.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
zstd.workspace = true

[lints]
workspace = true
