[package]
name = "sandbox-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
rmcp.workspace = true
sandbox-cli.workspace = true
sandbox-operation-catalog = { workspace = true, features = ["manager", "observability", "runtime"] }
sandbox-operation-contract.workspace = true
sandbox-protocol.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
