[package]
name = "sandbox-observability-operations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sandbox-protocol.workspace = true

[dev-dependencies]
sandbox-manager-operations.workspace = true
sandbox-runtime-operations.workspace = true

[lints]
workspace = true
