[package]
name = "sandbox-runtime-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "sandbox-runtime-cli"

[[bin]]
name = "sandbox-runtime-cli"
path = "src/main.rs"

[dependencies]
sandbox-cli-core.workspace = true
sandbox-runtime-operations.workspace = true
sandbox-protocol.workspace = true
clap.workspace = true
tokio.workspace = true

[lints]
workspace = true
