[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
eos-daemon.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
