[package]
name = "eos-agent-def"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
eos-types.workspace = true
serde.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
