[package]
name = "eos-agent-message-records"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
eos-types.workspace = true
eos-llm-client.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
