[package]
name = "eos-agent-run"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
eos-agent-def.workspace = true
eos-agent-message-records.workspace = true
eos-llm-client.workspace = true
eos-types.workspace = true
thiserror.workspace = true

[lints]
workspace = true
